--- a/pages/publication/2024-04-01-EthioLLM.md
+++ b/pages/publication/2024-04-01-EthioLLM.md
@@ -11,7 +11,7 @@ abstract: "Large language models (LLMs) have gained popularity recently due to t
             new benchmark datasets for various downstream tasks, and task-specific fine-tuned language models and discuss the performance of the models. Our dataset and models are available at the EthioNLP HuggingFace repository. "
 date: 2024-03-28
 tags: [machine learning, deep learning, papers, benchmark, Ethiopian Language NLP]
-dataset: https://huggingface.co/EthioNLP
+data: https://huggingface.co/EthioNLP
 paper: https://arxiv.org/abs/2403.13737
 github: https://github.com/EthioNLP/EthioLLM
 ---
