--- a/pages/publication/2017-06-01 AOHWR.md
+++ b/pages/publication/2017-06-01 AOHWR.md
@@ -13,7 +13,7 @@ abstract: "Using the touch screen capabilities of handhelds input method which i
             adopting this method for their language use. "
 date: 2023-03-25
 tags: [machine learning, deep learning, papers, benchmark, Ethiopian Language NLP]
-dataset: 
+data: 
 paper: https://drive.google.com/file/d/1Ez0lWNhFe_WTk24bC-CBML7lsYPnKI3T/view?usp=sharing
 github: 
 ---
